modified:   index.html

--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
           <h1>The Game Developers and Designers at IHS</h1>
-          <h2>A passionate community of Game development enthusiasts from Irvington High School</h2>
+          <h2>Taking game development to the next level</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+            <a href="https://www.yoxutube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-          <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
+          <img src="assets/img/ALKJ:FDHSL:AKJ" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
@@ -151,16 +151,14 @@
               
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+              <li><i class="ri-check-double-line"></i> Learn critical computer science and design skills to create and publish your own games</li>
+              <li><i class="ri-check-double-line"></i> Use languages and softwares like C# with Unity, Adobe Photoshop and Blender.</li>
+              <li><i class="ri-check-double-line"></i> Win competitions and establish yourself within the game development community</li>
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam ullam cumque recusandae vel quos at consectetur, fuga, nobis sunt officiis explicabo hic dolorem et magnam. Nam officiis laboriosam vitae itaque!
             </p>
             <a href="#" class="btn-learn-more">Learn More</a>
           </div>
