--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  
+  <!-- HTML Meta Tag-->
+  <meta name="google-site-verification" content="ov1MQHoaUwrChk_jatQziNJ_CKtXdIF6YHSdkEdbWSs" />
 
   <!-- =======================================================
   * Template Name: Arsha - v4.6.0
