--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <p>
               Gamers of the world unite! Irvington Game Development Club gives its members the oppurtunity to develop and test out new video games based on their interests
             </p>
-            <a href="#" class="btn-learn-more">Learn More</a>
+            <a href="#Services" class="btn-learn-more">Learn More</a>
           </div>
         </div>
 
@@ -212,7 +212,7 @@
                   <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
                     <p>
                       Not only do we give the resources required for you to begin game development, we also host tons of events like Game Jams where you can compete with other schools and the entire country. 
-                      We also bring in game developers/designers from prestigious universities such as CMU, and organizations like RIOT games, we even have the youtuber <a href = "https://www.youtube.com/channel/UCYbK_tjZ2OrIZFBvU6CCMiA">Brackeys</a> joining us for one of these talks.
+                      We also bring in game developers/designers from prestigious universities such as CMU, and organizations like RIOT games.
                     </p>
                   </div>
                 </li>
@@ -680,8 +680,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>41800 Blacow Rd. Fremont, CA 94538</p>
-                <p><strong>Room 54!</strong><p>
+                <p>Room 54</p>
               </div>
 
               <div class="email">
@@ -740,7 +739,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
 
-    <div class="footer-newsletter">
+   <!-- <div class="footer-newsletter">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6">
@@ -752,7 +751,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
 
     <div class="footer-top">
       <div class="container">
