--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Gamers of the world unite! Irvington Game Development Club gives its members the oppurtunity to develop and test out new video games based on their interests
+              Gamers of the world unite! Irvington Game Development Club gives its members the opportunity to develop and test out new video games based on their interests
             </p>
             <a href="#Services" class="btn-learn-more">Learn More</a>
           </div>
@@ -208,7 +208,7 @@
                 </li>
 
                 <li>
-                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed"><span>03</span> What oppurtunities do we offer? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed"><span>03</span> What opportunities do we offer? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
                     <p>
                       Not only do we give the resources required for you to begin game development, we also host tons of events like Game Jams where you can compete with other schools and the entire country. 
