--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 
           <div class="col-lg-6">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="100">
-              <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/TanayA.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Tanay Anand</h4>
                 <span>President & Founder</span>
@@ -487,7 +487,7 @@
 
           <div class="col-lg-6 mt-4 mt-lg-0">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
-              <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/RohanA.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Rohan Adwankar</h4>
                 <span>Vice President</span>
@@ -504,7 +504,7 @@
 
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/AaryaM.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Aarya Morgaonkar</h4>
                 <span>Vice President</span>
@@ -521,7 +521,7 @@
 
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
-              <div class="pic"><img src="assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/NathanL.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Nathan Lintu</h4>
                 <span>Treasurer</span>
