--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 
           <div class="col-lg-6 mt-4 mt-lg-0">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
-              <div class="pic"><img src="assets/img/team/RohanA.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/RohanA.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Rohan Adwankar</h4>
                 <span>Vice President</span>
