--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
                   <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                  <a href="www.linkedin.com/in/tanayanand"> <i class="ri-linkedin-box-fill"></i> </a>
                 </div>
               </div>
             </div>
