--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
               <div class="member-info">
                 <h4>Rohan Adwankar</h4>
                 <span>Vice President</span>
-                <p>STEM enthusiast with a passion for software development.</p>
+                <p>lgbtq enthusiast with a passion for software development.</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
@@ -508,7 +508,7 @@
               <div class="member-info">
                 <h4>Aarya Morgaonkar</h4>
                 <span>Vice President</span>
-                <p>Professional Roblox Player</p>
+                <p>Stem enthusiast with a passion for the intersectionalism between art and STEAM</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
