--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
               <div class="member-info">
                 <h4>Rohan Adwankar</h4>
                 <span>Vice President</span>
-                <p>lgbtq enthusiast with a passion for software development.</p>
+                <p>STEM enthusiast with a passion for software development.</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
