--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-          <h1>The Game Developers and Designers at IHS</h1>
+          <h1>The Game Developers and Designers at Irvington High School</h1>
           <h2>Taking game development to the next level</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
