--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-          <h1>The Game Developers and Designers at Irvington High School</h1>
+          <h1>The Game Developers and Designers at IHS</h1>
           <h2>Taking game development to the next level</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
@@ -474,7 +474,7 @@
               <div class="member-info">
                 <h4>Tanay Anand</h4>
                 <span>President & Founder</span>
-                <p>An Avid Game Developer with over 20 games made, and 8+ years of experience</p>
+                <p>An Avid Game Developer with over 20 cocks sucked, and 8+ years of experience</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
@@ -508,7 +508,7 @@
               <div class="member-info">
                 <h4>Aarya Morgaonkar</h4>
                 <span>Vice President</span>
-                <p>Stem enthusiast with a passion for the intersectionalism between art and STEAM</p>
+                <p>Developer with who enjoys the intersectionalism between art and STEM</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
