--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
               <div class="member-info">
                 <h4>Tanay Anand</h4>
                 <span>President & Founder</span>
-                <p>An Avid Game Developer with over 20 cocks sucked, and 8+ years of experience</p>
+                <p>An Avid Game Developer with over 20 games made, and 9+ years of experience in Computer Science as a whole</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
