--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed"><span>03</span> What opportunities do we offer? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      Not only do we give the resources required for you to begin game development, we also host tons of events like Game Jams where you can compete with other schools and the entire country. 
-                      We also bring in game developers/designers from prestigious universities such as CMU, and organizations like RIOT games.
+                      Not only do we give the resources required for you to begin game development, we also host  events like Game Jams where you can compete with other schools and the entire country. 
+                      We also bring in game developers/designers from prestigious universities such as CMU, and organizations like RIOT games to give you an overview of the field.
                     </p>
                   </div>
                 </li>
@@ -463,7 +463,7 @@
 
         <div class="section-title">
           <h2>Officers</h2>
-          <p>Meet the expert officers who will be hard at work making sure your experience at IHS Game Dev is as best as possible!</p>
+          <p>Meet the  officers who will be hard at work making sure your experience at IHS Game Dev is as fun as possible!</p>
         </div>
 
         <div class="row">
@@ -474,7 +474,7 @@
               <div class="member-info">
                 <h4>Tanay Anand</h4>
                 <span>President & Founder</span>
-                <p>An Avid Game Developer with over 20 games made, and 9+ years of experience in Computer Science as a whole</p>
+                <p>An avid game developer with over 20 games made, and 9+ years of experience in Computer Science</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
@@ -489,7 +489,7 @@
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
               <div class="pic"><img src="assets/img/team/RohanA.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Rohan Adwankar</h4>
+                <h4>Rohan Awankar</h4>
                 <span>Vice President</span>
                 <p>STEM enthusiast with a passion for software development.</p>
                 <div class="social">
@@ -525,7 +525,7 @@
               <div class="member-info">
                 <h4>Nathan Lintu</h4>
                 <span>Treasurer</span>
-                <p>self taught developer with competitive programming experience</p>
+                <p>Self taught developer with competitive programming experience</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
