fixed image sizing for team

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
               <div class="pic"><img src="assets/img/team/NathanL.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Nathan Lintu</h4>
-                <span>Treasurer</span>
+                <span>Secretary</span>
                 <p>Self taught developer with competitive programming experience</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
