--- a/index.html
+++ b/index.html
@@ -535,6 +535,23 @@
               </div>
             </div>
           </div>
+         //still need to add image
+                 <div class="col-lg-6 mt-4">
+            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
+              <div class="pic"><img src="assets/img/team/.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Sidarth Raman</h4>
+                <span>Treasurer</span>
+                <p>Developer</p>
+                <div class="social">
+                  <a href=""><i class="ri-twitter-fill"></i></a>
+                  <a href=""><i class="ri-facebook-fill"></i></a>
+                  <a href=""><i class="ri-instagram-fill"></i></a>
+                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                </div>
+              </div>
+            </div>
+          </div>
 
         </div>
 
