--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
               <div class="member-info">
                 <h4>Tanay Anand</h4>
                 <span>President & Founder</span>
-                <p>An avid game developer with over 20 games made, and 9+ years of experience in Computer Science</p>
+                <p>An avid game developer with over 20 games made, and 5+ years of experience in Computer Science</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
@@ -536,7 +536,7 @@
             </div>
           </div>
          
-          <div class="col-lg-6 mt-4">
+          <!--<div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="500">
               <div class="pic"><img src="assets/img/team/NathanL.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
