--- a/index.html
+++ b/index.html
@@ -536,13 +536,13 @@
             </div>
           </div>
          
-          <!--<div class="col-lg-6 mt-4">
+          <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="500">
-              <div class="pic"><img src="assets/img/team/NathanL.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Sidarth Raman</h4>
-                <span>Treasurer</span>
-                <p>Developer</p>
+                <span>Secretary</span>
+                <p>IN-ACTIVE</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
