--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
               <div class="pic"><img src="assets/img/team/RohanA.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Rohan Awankar</h4>
+                <h4>Rohan Adwankar</h4>
                 <span>Vice President</span>
                 <p>STEM enthusiast with a passion for software development.</p>
                 <div class="social">
