removed portfolio section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -344,7 +343,7 @@
       </div>
     </section>End Cta Section -->
 
-    <!-- ======= Portfolio Section ======= -->
+    <!-- ======= Portfolio Section 
     <section id="portfolio" class="portfolio">
       <div class="container" data-aos="fade-up">
 
