modified:   index.html

--- a/index.html
+++ b/index.html
@@ -292,16 +292,15 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">Discord</a></h4>
-              <p>Make sure to join our discord for up to date information regarding officer positions and other club related info.</p>
+              <h4><a href="https://discord.com/invite/xh7Su7hzrJ" target="_blank">Discord</a></h4>
+              <p>Make sure to join our <a href="https://discord.com/invite/xh7Su7hzrJ" target="_blank">discord server</a> for up to date information regarding officer positions and other club related info.</p>
             </div>
           </div>
-
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Apply</a></h4>
-              <p>Visit our <a href = "">application</a> page so you have the best chance at becoming an officer</p>
+              <h4><a href="https://forms.gle/TBzUcW2SA3jFt8jh6" target="_blank">Apply</a></h4>
+              <p>Visit our <a href = "https://forms.gle/TBzUcW2SA3jFt8jh6" target="_blank">application</a> page so you have the best chance at becoming an officer</p>
             </div>
           </div>
 
@@ -309,7 +308,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4><a href="">Intro Meeting</a></h4>
-              <p>Come to our intro meeting November 1st (Monday) at rm.54 - Be on time!</p>
+              <p>Come to our intro meeting November 9th (Tuesday) at P8 - Be on time!</p>
             </div>
           </div>
 
@@ -541,7 +540,7 @@
               <div class="member-info">
                 <h4>Sidarth Raman</h4>
                 <span>Secretary</span>
-                <p>IN-ACTIVE</p>
+                <p>I love coding and teaching others my skills</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
