--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
       </div>
     </section>End Cta Section -->
 
-    <!-- ======= Portfolio Section -->
+    <!-- ======= Portfolio Section
     <section id="portfolio" class="portfolio">
       <div class="container" data-aos="fade-up">
 
