--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div class="content">
               <h3>We Offer <strong>top of the line resources</strong> for anyone who is <strong>interested in the game development/design.</strong></h3>
               <p>
-                Come meet us at room 54 for our first intro meeting Monday 11/1/21, to learn more information about the club and projects/events we host.
+                Come meet us at P-8 for our first intro meeting Tuesday 11/9/21, to learn more information about the club and projects/events we host.
               </p>
             </div>
 
@@ -697,13 +697,13 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Room 54</p>
+                <p>P-8 (Only for intro meeting Tues. 11/9)</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>ihsgamedev@gmail.com</p>
+                <p>irvingtongamedev@gmail.com</p>
               </div>
 
               <div class="phone">
