--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
       </div>
     </section>End Cta Section -->
 
-    <!-- ======= Portfolio Section
+    <!-- ======= Portfolio Section-->
     <section id="portfolio" class="portfolio">
       <div class="container" data-aos="fade-up">
 
@@ -352,7 +352,6 @@
         </div>
 
         <ul id="portfolio-flters" class="d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
-          <li data-filter="*" class="filter-active">All</li>
           <li data-filter=".filter-app">2D Sample</li>
           <li data-filter=".filter-card">3D Sample</li>
           <li data-filter=".filter-web">Design Sample</li>
@@ -360,28 +359,24 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
+          
               <h4>2D Sample Game</h4>
               <p></p>
               <div id = "wrap">
-             <iframe src="https://i.simmer.io/@OrangeTangy/2d-sample" style="width:960px;height:600px"></iframe>
+                  <iframe src="https://i.simmer.io/@IHSGameDevClub/2d-samplegame" style="width:960px;height:600px;border:0"></iframe>
                 </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt=""></div>
-            <div class="portfolio-info">
-              <h4>Web 3</h4>
+          
+             <!-- <h4>Web 3</h4>
               <p>Web</p>
               <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+         <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>App 2</h4>
