--- a/index.html
+++ b/index.html
@@ -392,7 +392,8 @@
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
               <div class="pic"><img src="assets/img/team/RohanA.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Rohan Adwankar</h4>
+                <h4>Pedophile
+                  Adwankar</h4>
                 <span>Vice President</span>
                 <p>STEM enthusiast with a passion for game development.</p>
                 <div class="social">
