--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <li><a class="nav-link scrollto" href="#services">Officer Sign Up</a></li>
           <li><a class="nav-link   scrollto" href="#portfolio">Sample Projects</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <!--
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -74,6 +75,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
+-->
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
         </ul>
@@ -308,7 +310,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4><a href="">Intro Meeting</a></h4>
-              <p>Come to our intro meeting November 9th (Tuesday) at P8 - Be on time!</p>
+              <p>Come to our intro meeting September 20th (Tuesday) at Rm.51 - Be on time!</p>
             </div>
           </div>
 
@@ -377,7 +379,7 @@
               <div class="member-info">
                 <h4>Tanay Anand</h4>
                 <span>President & Founder</span>
-                <p>An avid game developer with over 20 games made, and 5+ years of experience in Computer Science</p>
+                <p>An avid game developer with over 6 years of experience in Computer Science</p>
                 <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
